--- a/package.json
+++ b/package.json
@@ -1,47 +1,19 @@
 {
     "name": "lively",
     "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-      "@material-ui/core": "^4.12.3",
-      "@material-ui/icons": "^4.11.2",
-      "@testing-library/jest-dom": "^5.16.2",
-      "@testing-library/react": "^12.1.3",
-      "@testing-library/user-event": "^13.5.0",
-      "express": "^4.17.3",
-      "nodemon": "^2.0.15",
-      "react": "^17.0.2",
-      "react-copy-to-clipboard": "^5.0.4",
-      "react-dom": "^17.0.2",
-      "react-scripts": "5.0.0",
-      "simple-peer": "^9.11.1",
-      "socket.io": "^4.4.1",
-      "socket.io-client": "^4.4.1",
-      "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject",
-      "dev": "nodemon server.js"
-    },
-    "eslintConfig": {
-      "extends": [
-        "react-app",
-        "react-app/jest"
-      ]
-    },
-    "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
+      "description": "",
+      "main": "index.js",
+      "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon server.js"
+      },
+      "keywords": [],
+      "author": "",
+      "license": "ISC",
+      "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "nodemon": "^2.0.7",
+        "socket.io": "^3.1.1"
+      }
     }
-  }
